# ALMG

./: .gitignore  .gitmodules  CMakeLists.txt  FitCircle.m  FitCircles.m  FitRoundabout.m  README.md  StaticMethods.m
OSM/: 2024-07-12-16-24-43.osm  2024-07-12-16-24-43.osm.fig  2024-07-15-16-12-28.osm  2024-07-15-16-12-28.osm.fig  2024-07-15-16-33-34.osm  2024-07-15-16-33-34.osm.fig
include/: Common.h  Landmark.h  TripAnalyzer.h
matlab_utils/: fit2DCircle.m  fit2DCircles.m
model/: README.md
model/src/: RTC.py  RoadTypeClassifier2.m  data_analysis.m  data_analysis_bi.m
model/train/Classification/data/: EF-2023-01-29-10.csv  EF-2023-01-29-11.csv  EF-2023-01-29-13.csv  EF-2023-01-29-14.csv  EF-2023-01-29-4.csv  EF-2023-01-29-5.csv  EF-2023-01-29-6.csv  EF-2023-01-29-7.csv  EF-2023-01-29-8.csv  EF-2023-01-29-9.csv  EF-2023-02-02-1.csv  EF-2023-02-02-11.csv  EF-2023-02-02-12.csv  EF-2023-02-02-13.csv  EF-2023-02-02-21.csv  EF-2023-02-02-22.csv  EF-2023-02-05-1.csv  EF-2023-02-05-11.csv  EF-2023-02-05-5.csv  EF-2023-02-05-6.csv  EF-2023-02-05-7.csv  EF-2023-02-05-8.csv  EF-2023-02-08-1.csv  EF-2023-02-08-2.csv  EF-2023-02-08-3.csv  EF-2023-02-08-4.csv  EF-2023-02-13-1.csv  EF-2023-02-13-2.csv  EF-2023-02-13-3.csv  EF-2023-02-13-5.csv  EF-2023-02-20-1.csv  EF-2023-02-24-1.csv  EF-2023-02-24-12.csv  (+57 more)
model/train/Detection/: output.csv  output_bi.csv
python/: DMDC.m  MapGenerator.py  README.md  RoadTypeClassifier2.m  main.py
python/+model_CNN/+ops/: addOutputLabel.m
src/: Landmark.cpp  TripAnalyzer.cpp  VisualizeMap.m  loadosm.m
test/: README.md  loadosm.m  test.m
(+205 files in other folders)
